fix overflow

--- a/src/app/components/additional/additional.module.scss
+++ b/src/app/components/additional/additional.module.scss
@@ -58,7 +58,19 @@ $large: 1024px;
         // flex-direction: column;
         gap: 1rem;
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(1, 1fr);
+
+        @include for-greater-than-smaller(){
+          grid-template-columns: repeat(2, 1fr);
+        }
+
+        @include for-greater-than-medium(){
+          grid-template-columns: repeat(3, 1fr);
+        }
+
+        @include for-greater-than-larger(){
+          grid-template-columns: repeat(4, 1fr);
+        }
 
         li{
             border: 1px solid rgba(255, 255, 255, 0.26);
